crates/panache-parser/tests/snapshots/yaml__yaml_suite_LHL4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: LHL4
input: "---\n!invalid{}tag scalar\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:invalid token while parsing block map key@12..13]
