crates/panache-parser/tests/snapshots/yaml__yaml_suite_LP6E.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: LP6E
input: "- [a, b , c ]\n- { \"a\"  : b\n   , c : 'd' ,\n   e   : \"f\"\n  }\n- [      ]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
