crates/panache-parser/tests/snapshots/yaml__yaml_suite_LQZ7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: LQZ7
input: "\"implicit block key\" : [\n  \"implicit flow key\" : value,\n ]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
