crates/panache-parser/tests/snapshots/yaml__yaml_suite_LX3P.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: LX3P
input: "[flow]: block\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
