crates/panache-parser/tests/snapshots/yaml__yaml_suite_M6YH.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: M6YH
input: "- |\n x\n-\n foo: bar\n-\n - 42\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
