crates/panache-parser/tests/snapshots/yaml__yaml_suite_M7NX.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: M7NX
input: "---\n{\n a: [\n  b, c, {\n   d: [e, f]\n  }\n ]\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
