crates/panache-parser/tests/snapshots/yaml__yaml_suite_MXS3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 871
expression: snapshot
---
case_id: MXS3
input: "- {a: b}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
