crates/panache-parser/tests/snapshots/yaml__yaml_suite_MYW6.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: MYW6
input: "|-\n ab\n \n \n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
