crates/panache-parser/tests/snapshots/yaml__yaml_suite_MZX3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: MZX3
input: "- plain\n- \"double quoted\"\n- 'single quoted'\n- >\n  block\n- plain again\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
